--- a/www/index.html
+++ b/www/index.html
@@ -18,16 +18,32 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <!--socket io client library-->
+    <script src="js/socket.io.js"></script>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+    <!-- Other Libraries-->
+    <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="lib/angular-socket-io/socket.js"></script>
+
+
+    <!-- your app's js -->
+
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+
+  </head>
+  <body ng-app="callidus">
+
+    <ion-pane ng-controller="callidus_controller">
+      <ion-header-bar class="bar-positive padding-horizonta">
+        <h1 class="title">Callidus</h1>
+
       </ion-header-bar>
-      <ion-content>
+
+      <ion-content padding="true" class="has-header">
+        <button class="button button-balanced button-block  icon-left ion-lightbulb" id="rele001" ng-click="releControl(&apos;rele001&apos;)">Lampada</button>
+        <button class="button button-assertive button-block  icon-left ion-monitor" id="rele002" ng-click="releControl(&apos;rele002&apos;)">Monitor</button>
+        <button class="button button-balanced button-block  icon-left ion-social-rss" id="rele003" ng-click="getReleStatus()">Sensor</button>
       </ion-content>
     </ion-pane>
   </body>
